# Fake_news_detection

./: pyproject.toml
